<resources>
    <string name="app_name">حصن الإسلام</string>
    <string name="misconceptions">ردود الشبهات</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="about_us">من نحن</string>
    <string name="youtube_channel">قناة اليوتيوب</string>
    <string name="bible">الكتاب المقدس</string>
    <string name="quran">القرأن</string>
    <string name="english">اللغة الإنجليزية</string>
    <string name="french">اللغة الفرنسية</string>
    <string name="german">اللغة الألمانية</string>
    <string name="spanish">اللغة الأسبانية</string>
    <string name="chinese">اللغة الصينية</string>
    <string name="russian">اللغة الروسية</string>
    <string name="translation_options">خيارات الترجمة</string>


    <string name="education_channel">قناة حصن الإسلام توعية</string>
    <string name="main_channel">قناة حصن الإسلام</string>
    <string name="main_channel_playlist_id" translatable="false">UUU_L2JZHwNb8_ZzfLRy10Pw</string>
    <string name="education_channel_playlist_id" translatable="false">UUmZUO5XuEQdRxmNTbuY9yEA</string>
    <string name="main_channel_id" translatable="false">UCU_L2JZHwNb8_ZzfLRy10Pw</string>
    <string name="education_channel_id" translatable="false">UCmZUO5XuEQdRxmNTbuY9yEA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="more">المزيد</string>
    <string name="search_title">بحث</string>
    <string name="instant_navigation">انتقال سريع</string>
    <string name="ok">موافق</string>
    <string name="choose_book">اخنر السفر</string>
    <string name="choose_chapter">اختر الاصحاح</string>
    <string name="choose_verse">اختر العدد</string>
    <string name="cancel">الغاء</string>
    <string name="swipe_to_refresh">للتحديث اسحب لأسفل</string>
    <string name="last_read">اخر قراءة</string>
    <string name="about_us_video_id">O5g86ppqXZc</string>
    <string name="about_us_video_title">رسالة إلى كل المفترين على الإسلام</string>
    <string name="save_last_read">حفظ اخر قراءة</string>
    <string name="no_bookmarks">عذراً..لا يوجد حفظ لأخر تلاوة حتى الآن</string>
    <string name="dismiss">إلغاء</string>
    <string name="bookmark_saved_successfully">تم حفظ أخر تلاوة بنجاح</string>
    <string name="email_title">عنوان الايميل</string>
    <string name="from">من</string>
    <string name="write_your_mail_here">اكتب إيميلك هنا</string>
    <string name="your_message">رسالتك</string>
    <string name="write_your_message_here">اكتب رسالتك هنا</string>
    <string name="send">إرسال</string>
    <string name="title">العنوان</string>
    <string name="email_title_error">يجب إدخال عنوان الإيميل</string>
    <string name="message_empty_error">تأكد أن رسالتك ليست فارغة</string>
    <string name="error_bible_quran_translation_api">عذراً..حدث خطأ يرجى المحاولة مرة أخرى</string>
    <string name="error_no_connection">لا يوجد اتصال بالانترنت..من فضلك تأكد من اتصالك بالانترنت ثو عاود المحاولة مرة أخرى</string>
    <string name="search_results_for">نتائج البحث عن :</string>
    <string name="no_results">عذرآ..لا يوجد نتائج بحث عن : </string>
    <string name="no_results_2">عذرآ..لا يوجد نتائج بحث</string>
    <string name="click_for_translation">اضغط للترجمة</string>
    <string name="pdf_book_name">وتحسبونه هيناٌ</string>
    <string name="misconceptions_main_title">شبهات وردود</string>
    <string name="copy_translation">نسخ الترجمة</string>
    <string name="book">كتاب</string>
    <string name="book_text_desc">(للرد على الشبهات)</string>

    /////////////////////////////////////
    <string-array name="bible_books">
        <item>اَلتَّكْوِينُ</item>
        <item>اَلْخُرُوجُ</item>
        <item>اَللَّاوِيِّينَ</item>
        <item>اَلْعَدَد</item>
        <item>اَلتَّثْنِيَة</item>
        <item>يَشُوع</item>
        <item>اَلْقُضَاة</item>
        <item>رَاعُوث</item>
        <item>صَمُوئِيلَ ٱلْأَوَّلُ</item>
        <item> صَمُوئِيلَ ٱلثَّانِي</item>
        <item>اَلْمُلُوكِ ٱلْأَوَّلُ</item>
        <item>اَلْمُلُوكِ ٱلثَّانِي</item>
        <item>أَخْبَارِ ٱلْأَيَّامِ ٱلْأَوَّلُ</item>
        <item>أَخْبَارِ ٱلْأَيَّامِ ٱلثَّانِي</item>
        <item>عَزْرَا</item>
        <item>نَحَمْيَا</item>
        <item>أَسْتِير</item>
        <item>أَيُّوبَ</item>
        <item>اَلْمَزَامِيرُ</item>
        <item>أَمْثَالٌ</item>
        <item>اَلْجَامِعَةِ</item>
        <item>نَشِيدُ ٱلْأَنْشَادِ</item>
        <item>إِشَعْيَاءَ</item>
        <item>إِرْمِيَا</item>
        <item>مَرَاثِي إِرْمِيَا</item>
        <item>حِزْقِيَال</item>
        <item>دَانِيآل</item>
        <item>هُوشَع</item>
        <item>يُوئِيل</item>
        <item>عَامُوس</item>
        <item>عُوبَدْيَا</item>
        <item>يُونَان</item>
        <item>مِيخَا</item>
        <item>نَاحُوم</item>
        <item>حَبَقُّوق</item>
        <item>صَفَنْيَا</item>
        <item>حَجَّي</item>
        <item>زَكَريَّا</item>
        <item>مَلَاخِي</item>
        <item>مَتَّى</item>
        <item>مَرْقُس</item>
        <item>لُوقا</item>
        <item>يوحنَّا</item>
        <item>أَعْمَالُ ٱلرُّسُلِ</item>
        <item>رِسَالَةُ بُولُسَ ٱلرَّسُولِ إِلَى أَهْلِ رُومِيَةَ</item>
        <item>رِسَالَةُ بُولُسَ ٱلرَّسُولِ ٱلأُولَى إِلَى أَهْلِ كُورِنْثُوسَ</item>
        <item>رِسَالَةُ بُولُسَ ٱلرَّسُولِ ٱلثَّانِيةُ إِلَى أَهْلِ كُورِنْثُوسَ</item>
        <item>غَلاطِيَّة</item>
        <item>أفَسُس</item>
        <item>فِيلِبِّي</item>
        <item>كُولُوسِي</item>
        <item>تسالونيكي ۱</item>
        <item>تسالونيكي ۲</item>
        <item>تيموثاوس ١</item>
        <item>تيموثاوس ۲</item>
        <item>تِيطُس</item>
        <item>فِلِيْمُون</item>
        <item>عِبرانِيّين</item>
        <item>يَعقُوب</item>
        <item>بطرس ١</item>
        <item>بطرس ٢</item>
        <item>يوحنَّا ١</item>
        <item>يوحنَّا ٢</item>
        <item>يوحنَّا ٣</item>
        <item>يَهُوذا</item>
        <item>رُؤيا</item>

    </string-array>

    <string-array name="bible_books_dialog">
        <item>اَلتَّكْوِينُ</item>
        <item>اَلْخُرُوجُ</item>
        <item>اَللَّاوِيِّينَ</item>
        <item>اَلْعَدَد</item>
        <item>اَلتَّثْنِيَة</item>
        <item>يَشُوع</item>
        <item>اَلْقُضَاة</item>
        <item>رَاعُوث</item>
        <item>صَمُوئِيلَ ٱلْأَوَّلُ</item>
        <item> صَمُوئِيلَ ٱلثَّانِي</item>
        <item>اَلْمُلُوكِ ٱلْأَوَّلُ</item>
        <item>اَلْمُلُوكِ ٱلثَّانِي</item>
        <item>أٱلْأَيَّامِ ٱلْأَوَّلُ</item>
        <item>أٱلْأَيَّامِ ٱلثَّانِي</item>
        <item>عَزْرَا</item>
        <item>نَحَمْيَا</item>
        <item>أَسْتِير</item>
        <item>أَيُّوبَ</item>
        <item>اَلْمَزَامِيرُ</item>
        <item>أَمْثَالٌ</item>
        <item>اَلْجَامِعَةِ</item>
        <item>نَشِيدُ ٱلْأَنْشَادِ</item>
        <item>إِشَعْيَاءَ</item>
        <item>إِرْمِيَا</item>
        <item>مَرَاثِي إِرْمِيَا</item>
        <item>حِزْقِيَال</item>
        <item>دَانِيآل</item>
        <item>هُوشَع</item>
        <item>يُوئِيل</item>
        <item>عَامُوس</item>
        <item>عُوبَدْيَا</item>
        <item>يُونَان</item>
        <item>مِيخَا</item>
        <item>نَاحُوم</item>
        <item>حَبَقُّوق</item>
        <item>صَفَنْيَا</item>
        <item>حَجَّي</item>
        <item>زَكَريَّا</item>
        <item>مَلَاخِي</item>
        <item>مَتَّى</item>
        <item>مَرْقُس</item>
        <item>لُوقا</item>
        <item>يوحنَّا</item>
        <item>أَعْمَالُ ٱلرُّسُلِ</item>
        <item>رُومِيَةَ</item>
        <item>كُورِنْثُوسَ ١</item>
        <item>كُورِنْثُوسَ ۲</item>
        <item>غَلاطِيَّة</item>
        <item>أفَسُس</item>
        <item>فِيلِبِّي</item>
        <item>كُولُوسِي</item>
        <item>تسالونيكي ۱</item>
        <item>تسالونيكي ۲</item>
        <item>تيموثاوس ١</item>
        <item>تيموثاوس ۲</item>
        <item>تِيطُس</item>
        <item>فِلِيْمُون</item>
        <item>عِبرانِيّين</item>
        <item>يَعقُوب</item>
        <item>بطرس ١</item>
        <item>بطرس ٢</item>
        <item>يوحنَّا ١</item>
        <item>يوحنَّا ٢</item>
        <item>يوحنَّا ٣</item>
        <item>يَهُوذا</item>
        <item>رُؤيا</item>

    </string-array>

</resources>