<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/quranFragment"
        android:enabled="true"
        android:icon="@drawable/ic_quran111"
        android:title="@string/quran" />
    <item
        android:id="@+id/bibleFragment"
        android:icon="@drawable/ic_book_bible22"
        android:title="@string/bible" />

    <item
        android:id="@+id/youtubeFragment"
        android:icon="@drawable/ic_youtube"
        android:title="@string/youtube_channel" />

    <item
        android:id="@+id/misconceptionsFragment"
        android:icon="@drawable/ic_misconceptions"
        android:title="@string/misconceptions" />

    <item
        android:id="@+id/more"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/contact_us" />

    <!--    <item-->
    <!--        android:id="@+id/about_us"-->
    <!--        android:enabled="true"-->
    <!--        android:icon="@drawable/ic_contact2"-->
    <!--        android:title="@string/about_us" />-->
</menu>