<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:padding="@dimen/vertical_margin_16">

    <TextView
        android:id="@+id/tvSubject"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/janna_bold"
        android:gravity="center"
        android:text="@string/email_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/subject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/subject" />

    <EditText
        android:id="@+id/subject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_text_outline"
        android:hint="@string/title"
        android:inputType="text"
        android:padding="@dimen/vertical_margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvSubject"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tvFrom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:fontFamily="@font/janna_bold"
        android:gravity="center"
        android:text="@string/from"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintEnd_toEndOf="@+id/tvSubject"
        app:layout_constraintStart_toStartOf="@id/tvSubject"
        app:layout_constraintTop_toTopOf="@+id/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_text_outline"
        android:hint="@string/write_your_mail_here"
        android:inputType="textEmailAddress"
        android:padding="@dimen/vertical_margin_16"
        app:layout_constraintEnd_toEndOf="@+id/subject"
        app:layout_constraintStart_toStartOf="@+id/subject"
        app:layout_constraintTop_toBottomOf="@+id/subject" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/janna_bold"
        android:gravity="center"
        android:text="@string/your_message"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvFrom"
        app:layout_constraintStart_toStartOf="@id/tvFrom"
        app:layout_constraintTop_toBottomOf="@id/tvFrom" />

    <EditText
        android:id="@+id/etMessage"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_text_outline"
        android:fontFamily="@font/cairo_regular"
        android:gravity="top"
        android:hint="@string/write_your_message_here"
        android:inputType="textMultiLine"
        android:padding="@dimen/vertical_margin_16"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/tvMessage"
        app:layout_constraintTop_toBottomOf="@id/tvMessage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/send"
        app:cornerRadius="@dimen/vertical_margin_16"
        app:elevation="@dimen/cardview_default_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etMessage" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/contact_us"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>