<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomsheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="@dimen/vertical_margin_16"
        android:text="@string/translation_options"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/english"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_ripple_color"
        android:paddingHorizontal="@dimen/vertical_margin_16"
        android:paddingVertical="@dimen/vertical_margin_16"
        android:text="@string/english"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/french"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_ripple_color"
        android:paddingHorizontal="@dimen/vertical_margin_16"
        android:paddingVertical="@dimen/vertical_margin_16"
        android:text="@string/french"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/english" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/german"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_ripple_color"
        android:paddingHorizontal="@dimen/vertical_margin_16"
        android:paddingVertical="@dimen/vertical_margin_16"
        android:text="@string/german"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/french" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/spanish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_ripple_color"
        android:paddingHorizontal="@dimen/vertical_margin_16"
        android:paddingVertical="@dimen/vertical_margin_16"
        android:text="@string/spanish"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/german" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/chinese"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_ripple_color"
        android:paddingHorizontal="@dimen/vertical_margin_16"
        android:paddingVertical="@dimen/vertical_margin_16"
        android:text="@string/chinese"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spanish" />
</androidx.constraintlayout.widget.ConstraintLayout>



