<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/moreLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".more.MoreFragment"
    tools:ignore="UnusedAttribute">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAboutUs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/vertical_margin_16"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center|start"
        android:paddingVertical="8dp"
        android:paddingStart="@dimen/vertical_margin_16"
        android:paddingEnd="@dimen/vertical_margin_16"
        android:text="@string/about_us"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view4" />


    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutUs" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLastRead" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvContactUs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/vertical_margin_16"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center|start"
        android:paddingVertical="8dp"
        android:paddingStart="@dimen/vertical_margin_16"
        android:paddingEnd="@dimen/vertical_margin_16"
        android:text="@string/contact_us"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_chat2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContactUs" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvLastRead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/vertical_margin_16"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center|start"
        android:paddingVertical="8dp"
        android:paddingStart="@dimen/vertical_margin_16"
        android:paddingEnd="@dimen/vertical_margin_16"
        android:text="@string/last_read"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_bookmark2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>